salesforce/force-app/main/default/objects/Field_Trust_Writer__mdt/Field_Trust_Writer__mdt.object-meta.xml
<CustomObject>
    <description>Maps users to writer labels (billing_sync, sales_rep, agent:renewal) and the system each label speaks for.</description>
    <label>Field Trust Writer</label>
    <pluralLabel>Field Trust Writers</pluralLabel>
</CustomObject>