salesforce/force-app/main/default/objects/Field_Trust_Writer__mdt/fields/Match_On__c.field-meta.xml
<CustomField>
    <fullName>Match_On__c</fullName>
    <description>What identifies the writer: a username, an assigned permission set, or a profile</description>
    <label>Match On</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Username</fullName>
            </value>
            <value>
                <fullName>Permission Set</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>