salesforce/force-app/main/default/objects/Field_Trust_Writer__mdt/fields/Match_Value__c.field-meta.xml
<CustomField>
    <fullName>Match_Value__c</fullName>
    <description>The username, permission set API name or profile name</description>
    <label>Match Value</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>