salesforce/force-app/main/default/objects/Field_Trust_Writer__mdt/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>The system this writer speaks for, compared with the contract's authority</description>
    <label>System</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>