salesforce/force-app/main/default/objects/Field_Trust_Writer__mdt/fields/Writer_Label__c.field-meta.xml
<CustomField>
    <fullName>Writer_Label__c</fullName>
    <description>Label used in the contract's allowed writers, for example billing_sync</description>
    <label>Writer Label</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>